# prototype

./: .dir-locals.el  .gitignore  .gitmodules  LICENSE  TODO.md  default.nix  hie.yaml  prototype.cabal  prototype.sln  release.nix  setup.py  shell.nix
GUI/: AssemblyAttributes.cs  ColorScheme.cs  Core.cs  Defaults.cs  Extensions.cs  GUI.csproj  GameScene.cs  ILetterClips.cs  IScene.cs  ISdlInitializer.cs  ITexture.cs  ITextureLoader.cs  IndexRotator.cs  LetterClips.cs  MainMenu.cs  MarshalHelper.cs  MenuItem.cs  Options.cs  Program.cs  Screen.cs  SdlInitializer.cs  SdlInputHelper.cs  TargetScene.cs  TextCropper.cs  TextRenderer.cs  Texture.cs  TextureLoader.cs  TextureWrapper.cs  Utf8Helper.cs
GUI.Test/: CoreTest.cs  ExtensionsTest.cs  GUI.Test.csproj  IndexRotatorTest.cs  MarshalHelperTest.cs  SdlResultTest.cs  TextCropperTest.cs  TextRendererTest.cs  Utf8HelperTest.cs
GUI.Test/Properties/: AssemblyInfo.cs
GUI/Menus/: FileChoiceMenu.cs  MainMenu.cs  Menu.cs  MenuItem.cs  OptionsMenu.cs
GUI/Properties/: AssemblyInfo.cs
Game/: Game.csproj  MetricCalculator.cs  Prototype.cs  TextAnalyzer.cs  TextProcessor.cs
Game.Test/: Game.Test.csproj  MetricCalculatorTest.cs  PrototypeTest.cs  TextAnalyzerTest.cs
Game.Test/Properties/: AssemblyInfo.cs
Game/Properties/: AssemblyInfo.cs
prototype/: Core.cs  GUI.csproj  LetterClips.cs  Program.cs  SdlResult.cs  TextRenderer.cs  TextureLoader.cs  TextureWrapper.cs
src/: color_scheme.py  constants.py  core.py  game_scene.py  gamescene.py  index_rotation.py  letter_clips.py  letterclips.py  main.py  menus.py  metrics.py  options.py  prototype.py  scene_type.py  text_cropping.py  text_processing.py  text_renderer.py  textprocessing.py  textrenderer.py  texture.py
src-exe/: Main.hs
src-lib/Prototype/: Main.hs
src/prototype/: colorscheme.py  core.py  gamescene.py  indexrotation.py  letterclips.py  menus.py  metrics.py  options.py  prototype.py  scenetype.py  textcropping.py  textrenderer.py  texture.py
test/: test.hs
tests/: test_core.py  test_main.py  test_texture.py  textanalysis_test.py
tests/prototype/: test_core.py  test_indexrotation.py  test_menus.py  test_prototype.py  test_textanalysis.py  test_textcropping.py  (+3 more)
