cabal-version:       2.4

name:                prototype
version:             0.1.0.0
homepage:            https://github.com/kenranunderscore/prototype
license:             BSD-3-Clause
license-file:        LICENSE
author:              Johannes Maier
maintainer:          johb.maier@gmail.com
category:            Text
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Prototype.Main
  build-depends:       base ^>=4.13.0.0
                     , brick
  hs-source-dirs:      library
  default-language:    Haskell2010

executable prototype
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -Wcompat -O2
  build-depends:       base ^>=4.13.0.0, prototype
  hs-source-dirs:      executable
  default-language:    Haskell2010

test-suite prototype-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base ^>=4.13.0.0
